--- a/src/components/Lexicon/components/ToggleSwitch/toggleSwitch.css
+++ b/src/components/Lexicon/components/ToggleSwitch/toggleSwitch.css
@@ -1,3 +1,11 @@
+.toggleSwitch-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+}
+
 .toggle-switch {
   position: relative;
   display: inline-block;
@@ -35,4 +43,21 @@
 }
 .toggle-switch input[type="checkbox"]:checked + .switch {
   background-color: var(--correct);
+}
+
+.hardmode {
+  position: absolute;
+  width: 50px;
+  margin-top: 10vh;
+  display: flex;
+  text-align: center;
+  font-size: small;
+  font-weight: bold;
+  white-space: wrap;
+  opacity: 0;
+  transition: all 300ms ease-in-out;
+}
+
+.toggleSwitch-container:hover .hardmode {
+  opacity: 1;
 }
