home page link added to navbar

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,17 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   padding-left: 1rem;
 }
 
+.nav-container > #home {
+  all: unset;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  font-size: x-large;
+}
+
 .nav-container > .navicon {
   all: unset;
   height: 50px;
