--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,7 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   align-items: center;
   text-align: center;
   max-width: 95%;
-  height: 480px;
+  height: fit-content;
   border: solid 1px var(--border-color);
   border-radius: 5px;
   background-color: white;
@@ -223,8 +223,8 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
 }
 
 .experience-text {
-  padding-left: 3rem;
-  padding-right: 3rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .languages-container {
@@ -254,6 +254,7 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
 }
 
 .project-cards-container {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -269,8 +270,8 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  height: 400px;
   width: 95%;
+  aspect-ratio: 1/1.5;
   border: solid 1px var(--border-color);
   border-radius: 10px;
   background-size: cover;
@@ -294,6 +295,10 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   transition: all 400ms ease-in-out;
 }
 
+.project-title > h2 {
+  font-size: large
+}
+
 .project-hover-content {
   height: 100%;
   display: none;
@@ -305,10 +310,6 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   padding-left: 2rem;
   padding-right: 2rem;
   padding-bottom: 4rem;
-}
-
-.project-hover-content > h2 {
-  white-space: nowrap;
 }
 
 .project-hover-content > a {
@@ -393,11 +394,15 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   color: white;
   gap: 1rem;
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
 }
 
 .footer-container > .contact-icons > a {
   all: unset;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
   border: solid 3px rgba(255,255,255,0.5);
   border-radius: 50%;
   padding: 0.5rem;
@@ -476,11 +481,11 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
 
   .experience-card {
     max-width: 40%;
-    height: fit-content;
+    min-height: 500px;
   }
 
   .project-card {
-    max-width: 40%;
+    width: 40%;
   }
 
   .filler-container {
@@ -492,9 +497,5 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
     right: 0px;
     bottom: 0px;
     border-left: solid 1px var(--border-color);
-  }
-
-  .footer-container {
-    display: none
   }
 }
