--- a/src/App.css
+++ b/src/App.css
@@ -388,6 +388,11 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   background-color: var(--primary-color);
 }
 
+.footer-container > #download-cv-button {
+  padding: 1rem;
+  margin-top: 1rem;;
+}
+
 .footer-container > .contact-icons {
   display: flex;
   justify-content: center;
