desktop navbar icons resized

--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,6 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   height: fit-content;
   flex-direction: column;
   justify-content: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
   gap: 2rem;
   width: fit-content;
 }
@@ -80,13 +78,12 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
 
 .nav-container > .navicons {
   display: none;
-  width: 50px;
+  /* width: 50px; */
   height: fit-content;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding: 1rem 2rem;
   gap: 2rem;
   width: fit-content;
 }
@@ -490,14 +487,17 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
     justify-content: flex-start;
     align-items: flex-end;
     gap: 3rem;
-    padding: 2rem;
+    padding: 2rem 0rem;
     width: 20vw;
     height: 100vh;
     position: fixed;
     top: 0px;
     left: 0px;
     bottom: 0px;
-    /* border-right: solid 1px var(--border-color); */
+  }
+
+  .nav-container > .home-icon {
+    padding: 1rem 2rem;
   }
 
   .nav-container > .desktop {
