--- a/src/App.css
+++ b/src/App.css
@@ -9,19 +9,24 @@
   --border-color: rgb(60, 60, 60);
 }
 
-h1, h2, h3, h4, h5, h6, a, p, span, li {
-  font-family: "Roboto", sans-serif;
+h1, h2 {
+  font-family: "Merriweather", serif;
 }
 
-/* Styling for filler panel for desktop view */
-.filler-container {
-  display: none;
+h3, h4, h5, h6, a, p, span, li {
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Styling for home page */
 .home-container {
   display: flex;
   flex-direction: column;
+}
+
+.new-home-container {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
 }
 
 .main-content-container {
@@ -78,7 +83,6 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
 
 .nav-container > .navicons {
   display: none;
-  /* width: 50px; */
   height: fit-content;
   flex-direction: column;
   justify-content: center;
@@ -455,6 +459,123 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   width: 90%;
 }
 
+#about-get-in-touch {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#about-get-in-touch > a {
+  text-decoration: none;
+  background-color: white;
+  background-color: var(--primary-color);
+  color: white;
+  margin-bottom: 2rem;
+  padding: 1rem;
+  border-radius: 10px;
+  width: fit-content;
+}
+
+/* Styling for navigation bar */
+.new-navigation-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.new-navigation-container > a {
+  text-decoration: none;
+  color: white;
+  font-size: 48px;
+}
+
+#down-arrow {
+  color: white;
+  font-size: 48px;
+  margin: 1rem;
+  transform: translateY(-50px)
+}
+
+/* Styling for Contact component */
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+
+.contact-me-container {
+  height: 90vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0% 0%;
+  width: 100%;
+  height: calc(100vh - 2rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.contact-me-container > h1 {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: calc(2rem + 1vw);
+}
+
+.contact-me-container > h2 {
+  font-size: 1rem;
+}
+
+.contact-details-container {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(250,250,250);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: left;
+  padding: 2rem;
+}
+
+.contact-details-container > .get-in-touch-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  text-align: left;
+  width: 100%;
+  padding-bottom: 2rem;;
+}
+
+.contact-details-container > .get-in-touch-wrapper > h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
+  margin: 0;
+}
+
+.contact-detail {
+  width: 100%;
+  padding: 10px 0px;
+  border-top: 1px solid rgb(230,230,230)
+}
+
+.contact-detail:last-child {
+  border-bottom: 1px solid rgb(230,230,230)
+}
+
+.contact-detail > h3 {
+  margin: 10px 0px 
+}
+
+.contact-detail > p {
+  margin: 10px 0px;
+  color: rgb(100,100,100)
+}
+
 /* Styling for footer component in mobile view */
 .footer-container {
   display: flex;
@@ -498,7 +619,6 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   align-items: center;
   text-align: center;
   color: white;
-  font-weight: bold;
   padding-bottom: 1rem;
   line-height: 0.1;
 }
