--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --primary-color: rgb(86, 109, 164);
   --secondary-color: rgba(125, 36, 14);
   --tertiary-color: rgba(103, 125, 14, 0.7);
+  --light-grey: rgb(245,245,245);
   --border-color: rgb(60, 60, 60);
 }
 
@@ -26,7 +27,7 @@ h3, h4, h5, h6, a, p, span, li {
 .new-home-container {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .main-content-container {
@@ -433,30 +434,100 @@ h3, h4, h5, h6, a, p, span, li {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  text-align: center;
   width: 100%;
   color: black;
 }
 
-.about-me-container > .about-image {
+.about-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2rem;;
+  min-height: 100vh;
   width: 100%;
-  height: 40vh;
+  background-color: var(--light-grey);
+}
+
+.about-text-container > h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
+  margin-top: 0;
+}
+
+.about-text-container > h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
+  margin-top: 0;
+}
+
+.about-text-container > p {
+  margin: 0;
+  padding: 1rem 0rem;
+  border-top: 1px solid rgb(230,230,230)
+}
+
+.image-wrapper {
+  background-color: var(--primary-color);
+  width: 100%;
+  height: 100vw;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#profile-pic {
+  background-position: 0% 0%;
+  width: 100%;
+  height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 0% 50%;
 }
 
-.about-text {
-  padding: 5vw;
+#henley-eight {
+  background-position: 50%;
+  width: 100%;
+  height: 50vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: 2rem;
 }
 
-.about-text > h2 {
-  color: var(--primary-color)
+#sport-career {
+  background-color: var(--primary-color);
+  color: white;
 }
 
-.about-me-container > #profile-pic {
-  background-position: 0% 0%;
-  width: 90%;
+#skills {
+  gap: 1rem;
+}
+
+#skills > h1 {
+  margin: 0;
+}
+
+.skills-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 0.5rem;
+}
+
+.skills-wrapper > p, .skills-wrapper > h3 {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.skills-wrapper > .icons-container {
+  display: flex;
+  justify-content: flex-start;
+  gap: 0.5rem;
+}
+
+#js-icon {
+  background-color: black;
 }
 
 #about-get-in-touch {
@@ -544,6 +615,29 @@ h3, h4, h5, h6, a, p, span, li {
   transform: translateY(-50px)
 }
 
+/* Styling for Full Page Header */
+.full-page-header-container {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0% 0%;
+  width: 100%;
+  height: calc(100vh - 1rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.full-page-header-container > h1 {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: calc(2rem + 1vw);
+}
+
+.full-page-header-container > h2 {
+  font-size: 1rem;
+}
+
 /* Styling for Contact component */
 .contact-container {
   display: flex;
@@ -554,33 +648,10 @@ h3, h4, h5, h6, a, p, span, li {
   width: 100%;
 }
 
-.contact-me-container {
-  height: 90vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 0% 0%;
-  width: 100%;
-  height: calc(100vh - 2rem);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.contact-me-container > h1 {
-  color: white;
-  font-family: "Montserrat", sans-serif;
-  font-size: calc(2rem + 1vw);
-}
-
-.contact-me-container > h2 {
-  font-size: 1rem;
-}
-
 .contact-details-container {
   width: 100%;
   height: 100vh;
-  background-color: rgb(250,250,250);
+  background-color: var(--light-grey);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -595,13 +666,14 @@ h3, h4, h5, h6, a, p, span, li {
   justify-content: flex-start;
   text-align: left;
   width: 100%;
-  padding-bottom: 2rem;;
+  padding-bottom: 2rem;
 }
 
 .contact-details-container > .get-in-touch-wrapper > h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
   margin: 0;
+
 }
 
 .contact-detail {
