--- a/src/App.css
+++ b/src/App.css
@@ -593,6 +593,7 @@ h1,h2,h3, h4, h5, h6, a, p, span, li {
   display: flex;
   justify-content: space-between;
   padding: 1rem;
+  z-index: 1;
 }
 
 .new-navigation-container > a {
@@ -639,6 +640,18 @@ h1,h2,h3, h4, h5, h6, a, p, span, li {
   padding-left: 3rem;
 }
 
+#pop-up-socials-wrapper {
+  display: flex;
+  padding: 2rem 3rem;
+  width: 220px;
+  justify-content: space-between;
+}
+
+#pop-up-socials-wrapper > a {
+  color: white;
+  font-size: 48px;
+}
+
 #nav-button {
   all: unset;
 }
@@ -666,6 +679,7 @@ h1,h2,h3, h4, h5, h6, a, p, span, li {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .full-page-header-container > h1 {
@@ -873,6 +887,10 @@ h1,h2,h3, h4, h5, h6, a, p, span, li {
 @media (min-width: 481px) {
   .home-container {
     flex-direction: row;
+  }
+
+  #socials-wrapper {
+    transform: translateX(-10%)
   }
 
   .nav-container {
