--- a/src/Lexicon/lexicon.css
+++ b/src/Lexicon/lexicon.css
@@ -442,15 +442,10 @@ body {
 }
 
 @media (min-width: 480px) {
-  .lexicon-container {
-    width: 65vw;
-    margin-left: 20vw;
-    margin-right: 15vw;
-  }
-
   .title-container {
     margin-top: 0;
-    border: none;
+    max-width: 550px;
+    padding-bottom: 0.5rem;
   }
 
   .logo-title {
