--- a/src/Lexicon/components/ToggleSwitch/toggleSwitch.css
+++ b/src/Lexicon/components/ToggleSwitch/toggleSwitch.css
@@ -55,9 +55,16 @@
   font-weight: bold;
   white-space: wrap;
   opacity: 0;
-  transition: all 300ms ease-in-out;
+  transition: all 500ms ease-in-out;
+  transform: translateY(20%)
 }
 
 .toggleSwitch-container:hover .hardmode {
   opacity: 1;
+}
+
+@media (min-width: 480px) {
+  .hardmode {
+    transform: translateY(30%)
+  }
 }
