--- a/src/App.css
+++ b/src/App.css
@@ -900,4 +900,8 @@ h1,h2,h3, h4, h5, h6, a, p, span, li {
   .project-cards-container{
     max-width: 80vw;
   }
+
+  #project-detail-prompt {
+    display: none;
+  }
 }
