--- a/src/App.css
+++ b/src/App.css
@@ -477,7 +477,9 @@ h1,h2,h3, h4, h5, h6, a, p, span, li {
   display: none;
 }
 
-
+#festive500-button {
+  color: rgb(28,30,61);
+}
 
 #dr-john-button {
   color: rgb(58, 75, 113)
